...
        >
          <Stack.Screen name="(tabs)" options={{ headerShown: false }} />
          <Stack.Screen
            name="add-city"
            options={{
              presentation: "modal",
              title: "都市を追加",
              headerLeft: () => <BackButton />,
            }}
          />
          <Stack.Screen
            name="select-city"
            options={{
              presentation: "modal",
              title: "都市を選択",
              headerLeft: () => <BackButton />,
            }}
          />
        </Stack>
      </ThemeProvider>
    </GestureHandlerRootView>
...
