...
          ),
        }}
      />
      <Tabs.Screen
        name="calculator"
        options={{
          title: "時差計算",
          tabBarIcon: ({ color, focused }) => (
            <TabBarIcon
              name={focused ? "calculator" : "calculator-outline"}
              color={color}
              focused={focused}
            />
...
